[package]
name = "ynab-reimbursements"
version = "0.0.1"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
description = "ynab-reimbursements is a tool to help reconcile reimbursable transactions in YNAB"
repository = "https://git.tozt.net/ynab-reimbursements"
license = "MIT"

[dependencies]
cursive = "0.12"
cursive_table_view = "0.10"
directories = "2.0"
snafu = "0.4"
ynab-api = "2"
