[package]
name = "ynab-reimbursements"
version = "0.0.3"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2018"
description = "ynab-reimbursements is a tool to help reconcile reimbursable transactions in YNAB"
repository = "https://git.tozt.net/ynab-reimbursements"
license = "MIT"

[dependencies]
cursive = "0.16"
cursive_table_view = "0.13"
directories = "3.0"
snafu = "0.6"
ynab-api = "3"
